--- a/eval-react-ts/src/App.css
+++ b/eval-react-ts/src/App.css
@@ -1,13 +1,20 @@
 body{
-  background: white;
+  margin: 0;
+  background: rgb(15, 15, 26); 
+  
 }
 
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
+  width: 100%;
+  max-width: none;
+  margin: 0;
+  padding: 0;
   text-align: center;
+  box-sizing: border-box;
 }
+
+
 
 .logo {
   height: 6em;
@@ -42,5 +49,6 @@ body{
 }
 
 .read-the-docs {
-  color: #888;
+  color: #200b0b;
 }
+/* ...existing code... */
